// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Description List horizontal renders correctly 1`] = `
<jest>
  <div
    class="bcl-description-list"
  >
    <div
      class="mb-3"
    >
      <dl
        class="row mb-0"
      >
        <div
          class="col"
        >
          <dt>
            <div
              class="d-flex"
            >
              <svg
                class="me-2 align-self-center bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#geo-alt-fill"
                />
              </svg>
              <p
                class="mb-0 d-inline-block"
              >
                Only title label with icon
              </p>
            </div>
          </dt>
        </div>
        <div
          class="col"
        >
          <dd>
            Description text goes here.
          </dd>
        </div>
      </dl>
    </div>
    <div
      class="mb-3"
    >
      <dl
        class="row mb-0"
      >
        <div
          class="col"
        >
          <dt>
            <div
              class="d-flex"
            >
              First title label
            </div>
          </dt>
          <dt>
            <div
              class="d-flex"
            >
              <svg
                class="me-2 align-self-center bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#geo-alt-fill"
                />
              </svg>
              <p
                class="mb-0 d-inline-block"
              >
                Second title label
              </p>
            </div>
          </dt>
        </div>
        <div
          class="col"
        >
          <dd>
            Description text goes here.
          </dd>
        </div>
      </dl>
    </div>
    <div>
      <dl
        class="row mb-0"
      >
        <div
          class="col"
        >
          <dt>
            <div
              class="d-flex"
            >
              Only title label
            </div>
          </dt>
        </div>
        <div
          class="col"
        >
          <dd>
            Description text goes here.
          </dd>
          <dd>
            Description text goes here.
          </dd>
        </div>
      </dl>
    </div>
  </div>
</jest>
`;

exports[`OE - Description List renders correctly 1`] = `
<jest>
  <dl
    class="bcl-description-list"
  >
    <div
      class="mb-3"
    >
      <dt>
        <div
          class="d-flex"
        >
          <svg
            class="me-2 align-self-center bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <p
            class="mb-0 d-inline-block"
          >
            Only title label with icon
          </p>
        </div>
      </dt>
      <dd>
        Description text goes here.
      </dd>
    </div>
    <div
      class="mb-3"
    >
      <dt>
        <div
          class="d-flex"
        >
          First title label
        </div>
      </dt>
      <dt>
        <div
          class="d-flex"
        >
          <svg
            class="me-2 align-self-center bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <p
            class="mb-0 d-inline-block"
          >
            Second title label
          </p>
        </div>
      </dt>
      <dd>
        Description text goes here.
      </dd>
    </div>
    <div>
      <dt>
        <div
          class="d-flex"
        >
          Only title label
        </div>
      </dt>
      <dd>
        Description text goes here.
      </dd>
      <dd>
        Description text goes here.
      </dd>
    </div>
  </dl>
</jest>
`;

exports[`OE - Description List with title bordered renders correctly 1`] = `
<jest>
  <h6
    class="mb-4 bcl-heading"
  >
    Description list test title
  </h6>
  <dl
    class="bcl-description-list"
  >
    <div
      class="border-bottom pb-2-5 mb-2-5"
    >
      <dt>
        <div
          class="d-flex"
        >
          <svg
            class="me-2 align-self-center bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <p
            class="mb-0 d-inline-block"
          >
            Only title label with icon
          </p>
        </div>
      </dt>
      <dd>
        Description text goes here.
      </dd>
    </div>
    <div
      class="border-bottom pb-2-5 mb-2-5"
    >
      <dt>
        <div
          class="d-flex"
        >
          First title label
        </div>
      </dt>
      <dt>
        <div
          class="d-flex"
        >
          <svg
            class="me-2 align-self-center bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <p
            class="mb-0 d-inline-block"
          >
            Second title label
          </p>
        </div>
      </dt>
      <dd>
        Description text goes here.
      </dd>
    </div>
    <div>
      <dt>
        <div
          class="d-flex"
        >
          Only title label
        </div>
      </dt>
      <dd>
        Description text goes here.
      </dd>
      <dd>
        Description text goes here.
      </dd>
    </div>
  </dl>
</jest>
`;

exports[`OE - Description List with title horizontal and bordered renders correctly 1`] = `
<jest>
  <h6
    class="mb-4 bcl-heading"
  >
    Description list test title
  </h6>
  <div
    class="bcl-description-list"
  >
    <div
      class="border-bottom pb-2-5 mb-2-5"
    >
      <dl
        class="row mb-0"
      >
        <div
          class="col"
        >
          <dt>
            <div
              class="d-flex"
            >
              <svg
                class="me-2 align-self-center bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#geo-alt-fill"
                />
              </svg>
              <p
                class="mb-0 d-inline-block"
              >
                Only title label with icon
              </p>
            </div>
          </dt>
        </div>
        <div
          class="col"
        >
          <dd>
            Description text goes here.
          </dd>
        </div>
      </dl>
    </div>
    <div
      class="border-bottom pb-2-5 mb-2-5"
    >
      <dl
        class="row mb-0"
      >
        <div
          class="col"
        >
          <dt>
            <div
              class="d-flex"
            >
              First title label
            </div>
          </dt>
          <dt>
            <div
              class="d-flex"
            >
              <svg
                class="me-2 align-self-center bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#geo-alt-fill"
                />
              </svg>
              <p
                class="mb-0 d-inline-block"
              >
                Second title label
              </p>
            </div>
          </dt>
        </div>
        <div
          class="col"
        >
          <dd>
            Description text goes here.
          </dd>
        </div>
      </dl>
    </div>
    <div>
      <dl
        class="row mb-0"
      >
        <div
          class="col"
        >
          <dt>
            <div
              class="d-flex"
            >
              Only title label
            </div>
          </dt>
        </div>
        <div
          class="col"
        >
          <dd>
            Description text goes here.
          </dd>
          <dd>
            Description text goes here.
          </dd>
        </div>
      </dl>
    </div>
  </div>
</jest>
`;

exports[`OE - Description List with title horizontal renders correctly 1`] = `
<jest>
  <h6
    class="mb-4 bcl-heading"
  >
    Description list test title
  </h6>
  <div
    class="bcl-description-list"
  >
    <div
      class="mb-3"
    >
      <dl
        class="row mb-0"
      >
        <div
          class="col"
        >
          <dt>
            <div
              class="d-flex"
            >
              <svg
                class="me-2 align-self-center bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#geo-alt-fill"
                />
              </svg>
              <p
                class="mb-0 d-inline-block"
              >
                Only title label with icon
              </p>
            </div>
          </dt>
        </div>
        <div
          class="col"
        >
          <dd>
            Description text goes here.
          </dd>
        </div>
      </dl>
    </div>
    <div
      class="mb-3"
    >
      <dl
        class="row mb-0"
      >
        <div
          class="col"
        >
          <dt>
            <div
              class="d-flex"
            >
              First title label
            </div>
          </dt>
          <dt>
            <div
              class="d-flex"
            >
              <svg
                class="me-2 align-self-center bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#geo-alt-fill"
                />
              </svg>
              <p
                class="mb-0 d-inline-block"
              >
                Second title label
              </p>
            </div>
          </dt>
        </div>
        <div
          class="col"
        >
          <dd>
            Description text goes here.
          </dd>
        </div>
      </dl>
    </div>
    <div>
      <dl
        class="row mb-0"
      >
        <div
          class="col"
        >
          <dt>
            <div
              class="d-flex"
            >
              Only title label
            </div>
          </dt>
        </div>
        <div
          class="col"
        >
          <dd>
            Description text goes here.
          </dd>
          <dd>
            Description text goes here.
          </dd>
        </div>
      </dl>
    </div>
  </div>
</jest>
`;

exports[`OE - Description List with title horizontal with different col size renders correctly 1`] = `
<jest>
  <h6
    class="mb-4 bcl-heading"
  >
    Description list test title
  </h6>
  <div
    class="bcl-description-list"
  >
    <div
      class="mb-3"
    >
      <dl
        class="row mb-0"
      >
        <div
          class="col-7"
        >
          <dt>
            <div
              class="d-flex"
            >
              <svg
                class="me-2 align-self-center bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#geo-alt-fill"
                />
              </svg>
              <p
                class="mb-0 d-inline-block"
              >
                Only title label with icon
              </p>
            </div>
          </dt>
        </div>
        <div
          class="col"
        >
          <dd>
            Description text goes here.
          </dd>
        </div>
      </dl>
    </div>
    <div
      class="mb-3"
    >
      <dl
        class="row mb-0"
      >
        <div
          class="col-7"
        >
          <dt>
            <div
              class="d-flex"
            >
              First title label
            </div>
          </dt>
          <dt>
            <div
              class="d-flex"
            >
              <svg
                class="me-2 align-self-center bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#geo-alt-fill"
                />
              </svg>
              <p
                class="mb-0 d-inline-block"
              >
                Second title label
              </p>
            </div>
          </dt>
        </div>
        <div
          class="col"
        >
          <dd>
            Description text goes here.
          </dd>
        </div>
      </dl>
    </div>
    <div>
      <dl
        class="row mb-0"
      >
        <div
          class="col-7"
        >
          <dt>
            <div
              class="d-flex"
            >
              Only title label
            </div>
          </dt>
        </div>
        <div
          class="col"
        >
          <dd>
            Description text goes here.
          </dd>
          <dd>
            Description text goes here.
          </dd>
        </div>
      </dl>
    </div>
  </div>
</jest>
`;

exports[`OE - Description List with title renders correctly 1`] = `
<jest>
  <h6
    class="mb-4 bcl-heading"
  >
    Description list test title
  </h6>
  <dl
    class="bcl-description-list"
  >
    <div
      class="mb-3"
    >
      <dt>
        <div
          class="d-flex"
        >
          <svg
            class="me-2 align-self-center bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <p
            class="mb-0 d-inline-block"
          >
            Only title label with icon
          </p>
        </div>
      </dt>
      <dd>
        Description text goes here.
      </dd>
    </div>
    <div
      class="mb-3"
    >
      <dt>
        <div
          class="d-flex"
        >
          First title label
        </div>
      </dt>
      <dt>
        <div
          class="d-flex"
        >
          <svg
            class="me-2 align-self-center bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <p
            class="mb-0 d-inline-block"
          >
            Second title label
          </p>
        </div>
      </dt>
      <dd>
        Description text goes here.
      </dd>
    </div>
    <div>
      <dt>
        <div
          class="d-flex"
        >
          Only title label
        </div>
      </dt>
      <dd>
        Description text goes here.
      </dd>
      <dd>
        Description text goes here.
      </dd>
    </div>
  </dl>
</jest>
`;
